# vl-convert

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DEVELOP.md  README.md  pixi.toml  sgconfig.yml  thirdparty_font.md  thirdparty_rust.yaml
vl-convert/: CLAUDE.md  Cargo.toml  README.md  thirdparty_javascript.md  thirdparty_rust.yaml
vl-convert-canvas2d/: Cargo.toml  README.md
vl-convert-canvas2d-deno/: Cargo.toml  README.md
vl-convert-canvas2d-deno/src/: lib.rs  ops.rs  resource.rs
vl-convert-canvas2d-deno/src/js/: canvas_element_polyfill.js  canvas_polyfill.js  context_polyfill.js  image_polyfill.js  path2d_polyfill.js
vl-convert-canvas2d-deno/src/ops/: drawing.rs  image_ops.rs  mod.rs  path_ops.rs  state.rs  text.rs  transform.rs
vl-convert-canvas2d/src/: arc.rs  context.rs  dom_matrix.rs  drawing_state.rs  error.rs  font_config.rs  font_parser.rs  geometry.rs  gradient.rs  lib.rs  path.rs  path2d.rs  pattern.rs  pattern_cache.rs  style.rs  text.rs
vl-convert-canvas2d/src/context/: drawing.rs  image_ops.rs  mod.rs  path_ops.rs  text_rendering.rs  transform.rs
vl-convert-canvas2d/tests/: canvas_comparison_tests.rs  integration_tests.rs
vl-convert-canvas2d/tests/canvas_comparison/: basic_drawing.rs  clipping.rs  common.rs  fractional_coords.rs  gradients.rs  image_data.rs  image_smoothing.rs  main.rs  max_width_text.rs  path2d_features.rs  patterns.rs  put_image_data.rs  transform_timing.rs
vl-convert-canvas2d/tests/node_baseline/: package-lock.json  package.json
vl-convert-common/: Cargo.toml  README.md
vl-convert-common/src/: error.rs  image_loading.rs  lib.rs  ops.rs  text.rs
vl-convert-fontsource/: Cargo.toml  README.md
vl-convert-fontsource-fontdb/: Cargo.toml
vl-convert-fontsource-fontdb/src/: cache.rs  client.rs  config.rs  error.rs  ext.rs  lib.rs  resolve.rs  types.rs
vl-convert-fontsource-fontdb/tests/: load_fontsource.rs
vl-convert-fontsource/src/: cache.rs  client.rs  config.rs  error.rs  fontdb_ext.rs  lib.rs  merge.rs  resolve.rs  types.rs
vl-convert-fontsource/tests/: load_fontsource.rs  test_cache.rs
vl-convert-google-fonts/: Cargo.toml  README.md
vl-convert-google-fonts/src/: cache.rs  client.rs  config.rs  error.rs  fontdb_ext.rs  lib.rs  resolve.rs  types.rs
vl-convert-google-fonts/tests/: load_google_fonts.rs
vl-convert-pdf/: Cargo.toml  LICENSE  README.md
vl-convert-pdf/examples/: pdf_conversion.rs
vl-convert-pdf/src/: encoding.rs  lib.rs
vl-convert-python/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  thirdparty_rust.yaml  vl_convert.pyi
vl-convert-python/notebooks/: altair_saver.ipynb  convert_vegalite.ipynb
vl-convert-python/src/: config.rs  conversions.rs  fonts.rs  helpers.rs  info.rs  lib.rs  metadata.rs  utils.rs
vl-convert-python/tests/: .gitignore  conftest.py  test_access_policy.py  test_asyncio.py  test_get_local_tz.py  test_get_locales.py  test_html_rendering.py  test_per_call_opts.py  test_specs.py  test_svg_rendering.py  test_themes.py  test_warnings.py  test_workers.py
vl-convert-rs/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  thirdparty_rust.yaml  vendor_imports.js
vl-convert-rs/benches/: scenegraph_scatter.rs
vl-convert-rs/examples/: bootstrap.js  conversion1.rs  conversion_sequence.rs  debug_conversion_sequence.rs  debug_ops.rs  simple_jsruntime.rs  simple_test.rs
vl-convert-rs/src/: converter.rs  data_ops.rs  deno_stubs.rs  error.rs  extract.rs  font_embed.rs  html.rs  image_loading.rs  lib.rs  svg_font.rs  text.rs
vl-convert-rs/src/bundler/: bundle_hook.rs  emit.rs  loader.rs  mod.rs  text.rs
vl-convert-rs/src/canvas2d/: mod.rs  ops.rs  resource.rs
vl-convert-rs/src/converter/: config.rs  config_tests.rs  fonts.rs  inner.rs  mod.rs  permissions.rs  plugin.rs  rendering.rs  tests.rs  transfer.rs  types.rs  value_or_string.rs  worker_pool.rs
vl-convert-rs/src/deno_emit/: bundle_hook.rs  emit.rs  mod.rs  text.rs
vl-convert-rs/src/extract/: mod.rs  scenegraph.rs  svg.rs  types.rs  vega.rs
vl-convert-rs/src/js/: bootstrap.js  canvas_polyfill.js  vl_convert_ops.js
vl-convert-rs/src/module_loader/: import_map.rs  mod.rs
vl-convert-rs/tests/: test_config.rs  test_extract.rs  test_fonts.rs  test_heap_limit.rs  test_plugins.rs  test_specs.rs  test_themes.rs  test_utils.rs
vl-convert-rs/tests/specs/: label_movies_scatter.vg.json  label_scatter_plot.vg.json  label_transform_test.vg.json  plugin_custom_scheme.vg.json
vl-convert-rs/tests/vl-specs/: bar_chart_trellis_compact.vl.json  circle_binned.vl.json  circle_binned_b64.vl.json  circle_binned_base_url.vl.json  custom_projection.vl.json  (+22 more)
vl-convert-serve/: Cargo.toml
vl-convert-serve/src/: admin.rs  budget.rs  datadog_fmt.rs  health.rs  lib.rs  svg.rs  types.rs  vega.rs  vegalite.rs
vl-convert-server/: CLAUDE.md  Cargo.toml  README.md
vl-convert-server/src/: accept.rs  admin.rs  budget.rs  bundling.rs  config.rs  health.rs  json_fmt.rs  lib.rs  listen.rs  listener.rs  main.rs  middleware.rs  reconfig.rs  router.rs  settings.rs  svg.rs  test_support.rs  themes.rs  types.rs  util.rs  vega.rs  vegalite.rs
vl-convert-server/tests/: test_admin_config.rs  test_admin_config_drain.rs  test_auth.rs  test_budget.rs  test_bundling.rs  test_cors.rs  test_errors.rs  test_fonts.rs  test_health.rs  test_logs.rs  test_middleware.rs  test_opaque.rs  test_openapi.rs  test_options.rs  test_overrides.rs  test_request_id.rs  test_server.rs  test_shutdown.rs  test_svg.rs  test_themes.rs  test_uds_admin_independent.rs  test_uds_basic.rs  test_uds_cleanup.rs  test_uds_e2e.rs  test_uds_peer_cred.rs  test_uds_permissions.rs  test_uds_shutdown.rs  test_user_agent.rs  test_validation.rs  test_vega.rs  test_vegalite.rs
vl-convert-vendor/: CLAUDE.md  Cargo.toml  LICENSE  README.md
vl-convert-vendor/src/: main.rs
vl-convert/src/: cli_types.rs  commands.rs  handlers.rs  io_helpers.rs  io_utils.rs  main.rs  serve.rs
vl-convert/tests/: test_cli.rs  test_env_vars.rs  test_formats.rs  test_javascript_bundling.rs  test_logging.rs  test_scenegraph.rs  test_serve_subprocess.rs  test_stdin_stdout.rs
(+139 files in other folders)
