[workspace]
resolver = "2"  # Needed for proper wgpu compilation

members = [
    "vl-convert-rs",
    "vl-convert",
    "vl-convert-python",
    "vl-convert-vendor"
]

[profile.release]
strip = true  # Automatically strip symbols from the binary
opt-level = "z"  # Optimize for size
# Disable LTO on Linux due to fix ring linker errors
lto = false
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive"] }

# Deno dependencies
#
# We use git dependencies because:
# 1. deno_runtime 0.235.0 on crates.io depends on fqdn ^0.4.6, which has been yanked
# 2. node_resolver 0.65.0 on crates.io requires sys_traits =0.1.17, but deno_runtime
#    git requires sys_traits 0.1.22 - they must come from the same commit to be compatible
deno_runtime = { git = "https://github.com/denoland/deno", rev = "7046dc85c45ab809267d715dc72250ead11705a7", features = ["hmr"] }
node_resolver = { git = "https://github.com/denoland/deno", rev = "7046dc85c45ab809267d715dc72250ead11705a7" }

# Crates.io dependencies - versions must match deno_runtime's expectations
deno_core = "0.380.0"          # For op2 and extension! macros
deno_error = "0.7.1"           # For JsErrorBox
deno_graph = { version = "=0.106.0", default-features = false, features = ["swc"] }  # Module graph for bundler
deno_ast = { version = "=0.52.0", features = ["bundler", "codegen", "transforms", "transpiling"] }  # SWC bundler

# Other Deno ecosystem crates
sys_traits = { version = "0.1.22", features = ["real", "libc"] }
deno_semver = "0.9.1"

dircpy = "0.3"
dssim = "3.2.4"
env_logger = "0.11.8"
fontdb = { version = "0.23.0", features = ["fontconfig"] }
futures = "0.3.30"
futures-util = "0.3.30"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
itertools = "0.14.0"
lazy_static = "1.4.0"
log = "0.4.20"
lz-str = "0.2.1"
png = "0.17.13"
predicates = "3.0.2"
pyo3 = { version = "0.25.0", features = ["extension-module", "anyhow", "abi3-py37"] }
pythonize = "0.25.0"
regex = "1"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls"] }
resvg = "0.45.1"
rstest = "0.25.0"
semver = "1.0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.106"
shellexpand = "3.1.0"
svg2pdf = "0.13.0"
tempfile = "3.8.0"
tiny-skia = "0.11.4"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
ttf-parser = "0.25.1"
usvg = "0.45.1"
zip-extract = "0.4.0"
