[package]
name = "vl-convert-canvas2d-deno"
version = "0.1.0"
edition = "2021"
description = "Deno extension for Canvas 2D API wrapping vl-convert-canvas2d"
license = "BSD-3-Clause"
repository = "https://github.com/vega/vl-convert"

[dependencies]
# Deno runtime for ops and extension macro
deno_core = { workspace = true }
deno_error = { workspace = true }

# Canvas 2D implementation
vl-convert-canvas2d = { path = "../vl-convert-canvas2d" }

# For gradient color parsing
csscolorparser = "0.7"

# For image data handling
tiny-skia = { workspace = true }

# For font database sharing
fontdb = { workspace = true }
