[package]
name = "vl-convert-fontsource-fontdb"
version = "2.0.0-rc1"
edition = "2021"
description = "Fontsource loading helpers for fontdb"
license = "BSD-3-Clause"
repository = "https://github.com/vega/vl-convert"

[dependencies]
backon = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
filetime = { workspace = true }
fontdb = { workspace = true }
futures-util = { workspace = true }
fs4 = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = "2"
tinyvec = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs", "rt-multi-thread"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
