[package]
name = "vl-convert-fontsource"
version = "2.0.0-rc1"
edition = "2021"
description = "Fontsource font downloading and caching"
license = "BSD-3-Clause"
repository = "https://github.com/vega/vl-convert"

[features]
fontdb = ["dep:fontdb", "dep:tinyvec"]

[dependencies]
backon = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
filetime = { workspace = true }
fontdb = { workspace = true, optional = true }
futures-util = { workspace = true }
fs4 = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
tinyvec = { workspace = true, optional = true }
read-fonts = { workspace = true }
skrifa = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs", "rt-multi-thread"] }
write-fonts = { workspace = true }

[dev-dependencies]
fontdb = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
