[package]
name = "vl-convert-google-fonts"
version = "2.0.0-rc1"
edition = "2021"
description = "Google Fonts downloading and caching"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/vega/vl-convert"
repository = "https://github.com/vega/vl-convert"
keywords = ["Fonts", "Google-Fonts"]

[features]
fontdb = ["dep:fontdb", "dep:tinyvec"]

[dependencies]
backon = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
filetime = { workspace = true }
fontdb = { workspace = true, optional = true }
futures-util = { workspace = true }
fs4 = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
thiserror = "2"
urlencoding = { workspace = true }
tinyvec = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "fs", "rt-multi-thread"] }

[dev-dependencies]
fontdb = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
