[package]
name = "vl-convert-pdf"
version = "0.14.0"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/jonmmease/vl-convert"
repository = "https://github.com/jonmmease/vl-convert"

[dependencies]
svg2pdf = "0.7.1"
pdf-writer = "0.8.1"
usvg = "0.35.0"
anyhow = "1.0.71"
ttf-parser = "0.19.2"
subsetter = "0.1.1"
miniz_oxide = "0.7.1"
siphasher = "1.0.0"
itertools = "0.11.0"
unicode-bidi = "0.3.13"
