[package]
name = "vl-convert-pdf"
version = "1.2.3"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/jonmmease/vl-convert"
repository = "https://github.com/jonmmease/vl-convert"
description = "Crate to convert SVG to PDF with embedded text"
keywords = ["SVG", "PDF"]

[dependencies]
svg2pdf = "0.9.1"
pdf-writer = "0.9.2"
usvg = "0.36.0"
anyhow = "1.0.71"
ttf-parser = "0.20.0"
subsetter = "0.1.1"
miniz_oxide = "0.7.1"
siphasher = "1.0.0"
itertools = "0.12.0"
unicode-bidi = "0.3.13"
