[package]
name = "vl-convert-python"
version = "1.2.3"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/jonmmease/vl-convert"
repository = "https://github.com/jonmmease/vl-convert"
publish = false

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vl_convert"
crate-type = ["cdylib"]

[dependencies]
vl-convert-rs = { path = "../vl-convert-rs", version= "1.2.3" }
pyo3 = { version = "0.20.0", features = ["extension-module", "anyhow", "abi3-py37"] }
lazy_static = "1.4.0"
futures = "0.3.28"
pythonize = "0.20.0"
tokio = { version= "1.32" }

