[package]
name = "vl-convert-python"
version = "1.9.0"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/jonmmease/vl-convert"
repository = "https://github.com/jonmmease/vl-convert"
publish = false

[package.metadata.release]
release = false

[lib]
name = "vl_convert"
crate-type = ["cdylib"]

[dependencies]
vl-convert-rs = { path = "../vl-convert-rs", version = "1.7.0" }
pyo3 = { workspace = true }
lazy_static = { workspace = true }
futures = { workspace = true }
pythonize = { workspace = true }
tokio = { workspace = true }
