[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "vl-convert-python"
requires-python = ">=3.7"
description = "Convert Vega-Lite chart specifications to SVG, PNG, or Vega"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
sdist-include = ["*_thirdparty.*"]
