[package]
name = "vl-convert-rs"
version = "1.9.0"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/jonmmease/vl-convert"
repository = "https://github.com/jonmmease/vl-convert"
description = "Library for converting Vega-Lite visualization specifications to Vega specifications"
keywords = ["Visualization", "Vega", "Vega-Lite"]

[features]
# The snapshot feature enables build-time V8 snapshot generation.
# This creates a snapshot containing all deno_runtime extensions plus our
# vl_convert_runtime extension, eliminating runtime JavaScript compilation
# and improving startup performance, especially in minimal container environments.
default = ["snapshot"]
snapshot = []

[dependencies]
# Deno runtime - provides MainWorker with all Web APIs
deno_runtime = { workspace = true }
# deno_core needed explicitly for op2 and extension! macros
deno_core = { workspace = true }
# deno_error for JsErrorBox
deno_error = { workspace = true }
# For stub type implementations
node_resolver = { workspace = true }
sys_traits = { workspace = true }
deno_semver = { workspace = true }
# For bundler module
deno_graph = { workspace = true }
deno_ast = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
usvg = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }
svg2pdf = { workspace = true }
ttf-parser = { workspace = true }
png = { workspace = true }
fontdb = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
lz-str = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
dssim = { workspace = true }

[build-dependencies]
deno_core = { workspace = true }
deno_error = { workspace = true }
# Need "snapshot" feature to access deno_runtime::snapshot::create_runtime_snapshot
deno_runtime = { workspace = true, features = ["snapshot"] }

# Note: Deno 2.5+ uses libffi-sys 3.x which should not require the macOS system libffi workaround.
