[package]
name = "vl-convert-rs"
version = "1.9.0"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/jonmmease/vl-convert"
repository = "https://github.com/jonmmease/vl-convert"
description = "Library for converting Vega-Lite visualization specifications to Vega specifications"
keywords = ["Visualization", "Vega", "Vega-Lite"]

[dependencies]
vl-convert-canvas2d = { path = "../vl-convert-canvas2d" }
vl-convert-canvas2d-deno = { path = "../vl-convert-canvas2d-deno", features = ["svg"] }

deno_runtime = { workspace = true }
deno_core = { workspace = true }
deno_error = { workspace = true }
node_resolver = { workspace = true }
sys_traits = { workspace = true }
deno_semver = { workspace = true }
deno_graph = { workspace = true }
deno_ast = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
usvg = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }
svg2pdf = { workspace = true }
ttf-parser = { workspace = true }
png = { workspace = true }
fontdb = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
lz-str = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
lazy_static = { workspace = true }
base64 = "0.22.1"
escape8259 = "0.5.3"

[dev-dependencies]
rstest = { workspace = true }
dssim = { workspace = true }

[build-dependencies]
deno_core = { workspace = true }
deno_error = { workspace = true }
# Need "snapshot" feature to access deno_runtime::snapshot::create_runtime_snapshot
deno_runtime = { workspace = true, features = ["snapshot"] }
# Canvas 2D Deno extension - used in snapshot creation
vl-convert-canvas2d-deno = { path = "../vl-convert-canvas2d-deno" }