[package]
name = "vl-convert-rs"
version = "2.0.0-rc1"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/jonmmease/vl-convert"
repository = "https://github.com/jonmmease/vl-convert"
description = "Library for converting Vega-Lite visualization specifications to Vega specifications"
keywords = ["Visualization", "Vega", "Vega-Lite"]

[dependencies]
vl-convert-canvas2d = { path = "../vl-convert-canvas2d", version = "2.0.0-rc1" }
vl-convert-canvas2d-deno = { path = "../vl-convert-canvas2d-deno", version = "2.0.0-rc1", features = ["svg"] }
vl-convert-google-fonts = { path = "../vl-convert-google-fonts", version = "2.0.0-rc1", features = ["fontdb"] }

deno_runtime = { workspace = true }
deno_core = { workspace = true }
deno_error = { workspace = true }
node_resolver = { workspace = true }
sys_traits = { workspace = true }
deno_semver = { workspace = true }
deno_graph = { workspace = true }
deno_ast = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
usvg = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }
svg2pdf = { workspace = true }
ttf-parser = { workspace = true }
png = { workspace = true }
fontdb = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
lz-str = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
jsonc-parser = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
svgtypes = { workspace = true }
tempfile = { workspace = true }
lazy_static = { workspace = true }
backon = { workspace = true }
roxmltree = { version = "0.20", features = ["positions"] }
simplecss = "0.2.2"
rmp-serde = "1.3.0"
base64 = "0.22.1"
escape8259 = "0.5.3"
font-subset = { version = "0.1", features = ["woff2"] }
urlencoding = "2"

# Enable std feature so winapi::ctypes::c_void re-exports core::ffi::c_void,
# matching std's RawHandle type. Without this, deno_io fails to compile on Windows.
# Must be in both dependencies and build-dependencies because resolver v2
# resolves their features independently.
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std"] }

[target.'cfg(windows)'.build-dependencies]
winapi = { version = "0.3", features = ["std"] }

[dev-dependencies]
rstest = { workspace = true }
dssim = { workspace = true }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "scenegraph_scatter"
harness = false

[build-dependencies]
deno_core = { workspace = true }
deno_error = { workspace = true }
# Need "snapshot" feature to access deno_runtime::snapshot::create_runtime_snapshot
deno_runtime = { workspace = true, features = ["snapshot"] }
# Canvas 2D Deno extension - used in snapshot creation
vl-convert-canvas2d-deno = { path = "../vl-convert-canvas2d-deno", version = "2.0.0-rc1" }
