[package]
name = "vl-convert-server"
version = "2.0.0-rc1"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/jonmmease/vl-convert"
repository = "https://github.com/jonmmease/vl-convert"
description = "HTTP server for converting Vega-Lite and Vega specifications to static images"
keywords = ["Visualization", "Vega", "Vega-Lite", "Server"]

[[bin]]
name = "vl-convert-server"
path = "src/main.rs"

[lib]
name = "vl_convert_server"
path = "src/lib.rs"

[dependencies]
vl-convert-rs = { path = "../vl-convert-rs", version = "2.0.0-rc1" }
vl-convert-google-fonts = { path = "../vl-convert-google-fonts", version = "2.0.0-rc1" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
shellexpand = { workspace = true }
itertools = { workspace = true }
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.5", features = ["timeout", "limit", "load-shed"] }
tower-http = { version = "0.6", features = ["catch-panic", "compression-full", "cors", "request-id", "timeout", "trace", "propagate-header", "util"] }
subtle = "2"
http = "1"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dashmap = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.1.3"
utoipa-swagger-ui = { version = "8", features = ["axum"] }
arc-swap = "1.9"

[target.'cfg(unix)'.dependencies]
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking", "json"] }
tokio = { workspace = true }
serde_json = { workspace = true }
once_cell = "1"
tempfile = { workspace = true }
# UDS integration tests use a raw hyper client over tokio UnixStream
# — reqwest 0.11.x has no UDS transport feature, so we drive the
# connection directly. http-body-util provides `Full<Bytes>` for the
# request body.
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "tokio"] }
http-body-util = "0.1"
bytes = "1"
assert_cmd = { workspace = true }
