[package]
name = "vl-convert-vendor"
version = "1.4.0"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/jonmmease/vl-convert"
repository = "https://github.com/jonmmease/vl-convert"
publish = false

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.106"
reqwest = { version="0.11" , features = ["blocking"]}
zip-extract = "0.1"
tempfile = "3.8"
anyhow = "1.0"
dircpy = "0.3"
semver = "1.0.20"
