[package]
name = "vl-convert-vendor"
version = "1.6.0"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/jonmmease/vl-convert"
repository = "https://github.com/jonmmease/vl-convert"
publish = false

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
zip-extract = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
dircpy = { workspace = true }
semver = { workspace = true }
