[package]
name = "vl-convert"
version = "1.6.0"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/jonmmease/vl-convert"
repository = "https://github.com/jonmmease/vl-convert"
description = "CLI application for converting Vega-Lite visualization specifications to Vega specifications"
keywords = ["Visualization", "Vega", "Vega-Lite"]

[dependencies]
vl-convert-rs = { path = "../vl-convert-rs", version = "1.2.3" }
tokio = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
shellexpand = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
dssim = { workspace = true }
